syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.rachvik.profile.service";

import "profile/models/user.proto";
service ProfileService {
  rpc saveUser(SaveUserRequest) returns (SaveUserResponse) {};
  rpc getUser(GetUserRequest) returns (GetUserResponse) {};
}
